--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.4",
     "redis": "^5.5.6",
+    "stripe": "^18.3.0",
     "validator": "^13.11.0"
   },
   "devDependencies": {
