--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@paypal/checkout-server-sdk": "^1.0.3",
     "africastalking": "^0.7.3",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.3",
