--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.4",
+    "pdfkit": "^0.17.1",
     "redis": "^5.5.6",
     "stripe": "^18.3.0",
     "validator": "^13.11.0"
