feat: update backend repo

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 # Firebase service account
 firebase-service-account.json
 src/config/serviceAccountKey.json
+src/config/serviceAccountKey.json
 
 # logs
 npm-debug.log*
