--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.4",
     "pdfkit": "^0.17.1",
+    "puppeteer": "^24.17.0",
     "redis": "^5.5.6",
     "stripe": "^18.3.0",
     "validator": "^13.11.0"
