--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nodemailer": "^7.0.6",
     "pdfkit": "^0.17.1",
     "puppeteer": "^24.17.0",
+    "qrcode": "^1.5.4",
     "redis": "^5.5.6",
     "stripe": "^18.3.0",
     "validator": "^13.11.0"
