--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Server Configuration
 PORT=4000
 NODE_ENV=development
+TEST_MODE=true
 
 # MongoDB Connection
 MONGODB_URI=mongodb://localhost:27017/b2b_platform
